// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field DocumentLibrary has a helptext 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
      <div>
        Type something
      </div>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a label 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <label
      class="ddm-label"
      for="uploadField"
      id="uploadField_fieldLabel"
    >
      label
    </label>
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a placeholder 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        placeholder="Placeholder"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a spritemap 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a value 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{\\"id\\":\\"123\\"}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has an id 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary is not readOnly 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="uploadField"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            class="select-button btn btn-secondary"
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary is not required 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            aria-required="false"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group has-error hide"
    data-field-name="uploadField"
  >
    <label
      class="ddm-label"
      for="uploadField"
      id="uploadField_fieldLabel"
    >
      text
    </label>
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-label="file"
            class="form-control bg-light field"
            disabled=""
            id="uploadFieldinputFile"
            readonly="true"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-describedby="uploadField_fieldFeedback"
            class="select-button btn btn-secondary"
            disabled=""
            id="uploadField"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        id="uploadField"
        name="uploadField"
        type="hidden"
        value="{}"
      />
    </div>
    <input
      name="uploadField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="uploadField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator inline-item-before"
        >
          <svg
            class="lexicon-icon lexicon-icon-exclamation-full"
            role="presentation"
          >
            <use
              href="#exclamation-full"
            />
          </svg>
        </span>
         you-need-to-be-signed-in-to-edit-this-field
      </div>
    </div>
  </div>
</div>
`;
